Fixed console room client loading